[gd_scene load_steps=51 format=3 uid="uid://c2akhsyinel8t"]

[ext_resource type="Script" uid="uid://ccrew8qivqlpt" path="res://scripts/entities/player/dawn/dawn.gd" id="1_m3k46"]
[ext_resource type="Script" uid="uid://b5x83pb133x8d" path="res://scripts/entities/player/player_states/player_state_machine.gd" id="2_n7ie5"]
[ext_resource type="Script" uid="uid://2u0qr5shhbye" path="res://scripts/entities/player/dawn/states/dawn_idle.gd" id="3_qntpm"]
[ext_resource type="Script" uid="uid://cg0mo72va2qqs" path="res://scripts/entities/player/dawn/states/dawn_moving.gd" id="4_wex2d"]
[ext_resource type="Script" uid="uid://clwu1a1we224o" path="res://scripts/entities/player/player_states/player_attacking.gd" id="5_548oj"]
[ext_resource type="Script" uid="uid://276qi6fix2cm" path="res://scripts/entities/player/dawn/states/dawn_fire_tone.gd" id="6_n7ie5"]
[ext_resource type="Script" uid="uid://dbibjhk11ovnr" path="res://scripts/entities/player/player_states/player_charge.gd" id="6_qnimx"]
[ext_resource type="Script" uid="uid://cdyk5mdxf2wsl" path="res://scripts/entities/player/dawn/states/dawn_charged_attack.gd" id="8_548oj"]
[ext_resource type="Script" uid="uid://bht7ur6aqu5my" path="res://scripts/entities/player/player_states/player_charge_special.gd" id="8_bbdqe"]
[ext_resource type="Script" uid="uid://cw3b5sywe4lom" path="res://scripts/entities/player/nova/states/nova_swap_in.gd" id="9_qntpm"]
[ext_resource type="Script" uid="uid://djvxi0ch0fjd4" path="res://scripts/entities/player/dawn/states/dawn_special.gd" id="10_7cxsd"]
[ext_resource type="Script" uid="uid://dssk02ahlboui" path="res://scripts/entities/player/player_states/player_swap_out.gd.gd" id="10_wex2d"]
[ext_resource type="Script" uid="uid://dwp2qr3aqomck" path="res://scripts/entities/player/dawn/states/dawn_special_ability.gd" id="11_bbdqe"]
[ext_resource type="Script" uid="uid://cty8d5lvonei1" path="res://scripts/entities/player/player_states/player_sleeping.gd" id="11_bxptc"]
[ext_resource type="Script" uid="uid://d3pkbl7ownr11" path="res://scripts/entities/player/player_states/player_hit_stun.gd" id="12_6x7f2"]
[ext_resource type="Script" uid="uid://cpj3ro4ajatrk" path="res://scripts/entities/player/dawn/states/dawn_tone_forte.gd" id="12_bxptc"]
[ext_resource type="Script" uid="uid://vw4slmysqu7q" path="res://scripts/entities/player/dawn/states/dawn_tone_fishshield.gd" id="13_e60w5"]
[ext_resource type="Script" uid="uid://cpcuaot05ab18" path="res://scripts/entities/player/player_states/player_dash.gd" id="18_wex2d"]
[ext_resource type="Script" uid="uid://dphi1qwayotd2" path="res://scripts/entities/player/dawn/dawn_notes.gd" id="21_h3uuf"]
[ext_resource type="Script" uid="uid://cfs2f64dnml45" path="res://scripts/entities/player/dawn/dawn_tone_emitter.gd" id="22_xiq0h"]
[ext_resource type="Script" uid="uid://dhp5dxiok3t8i" path="res://scripts/dev/debug_render_hitboxes.gd" id="23_h166w"]
[ext_resource type="PackedScene" uid="uid://km5dpokk1mk0" path="res://scenes/final/dawn/tone_melody.tscn" id="23_n7ie5"]
[ext_resource type="PackedScene" uid="uid://crtpdqb2ymr2p" path="res://scenes/final/dawn/tone_slowwave.tscn" id="25_qnimx"]
[ext_resource type="Texture2D" uid="uid://qj1lsmefhhje" path="res://vfx/Kenny Particle Pack/circle_05.png" id="25_xphuo"]
[ext_resource type="Script" uid="uid://bfrtyltb7er5j" path="res://scripts/utility/ui_consumable.gd" id="27_7cxsd"]
[ext_resource type="PackedScene" uid="uid://bdh4cmnftg18b" path="res://scenes/final/dawn/tone_wave.tscn" id="28_qntpm"]
[ext_resource type="PackedScene" uid="uid://cein11fhbr6sp" path="res://scenes/final/dawn/tone_fish.tscn" id="28_wex2d"]
[ext_resource type="PackedScene" uid="uid://btiyd8a5nuror" path="res://scenes/final/dawn/tone_stunwave.tscn" id="31_6x7f2"]
[ext_resource type="PackedScene" uid="uid://b283w2r1qef60" path="res://art_assets/characters/Dawn/dawn_rig.glb" id="31_qntpm"]
[ext_resource type="PackedScene" uid="uid://cl4unmlmmfvgl" path="res://scenes/final/dawn/tone_vortex.tscn" id="32_n6vc4"]
[ext_resource type="PackedScene" uid="uid://bndpka5pxyhx6" path="res://scenes/final/dawn/tone_ice.tscn" id="33_fgi08"]
[ext_resource type="PackedScene" uid="uid://bt3ebb8eyl2c7" path="res://scenes/dev/arshiya_r/magic circle things/magic_circle_dawn.tscn" id="38_pk6rl"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_21ndv"]

[sub_resource type="Curve" id="Curve_bxptc"]
_data = [Vector2(0, 0.4264151), 0.0, 0.5735849, 0, 1, Vector2(1, 1), 0.5735849, 0.0, 1, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_6x7f2"]
curve = SubResource("Curve_bxptc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_e60w5"]
particle_flag_align_y = true
direction = Vector3(0, 0, -1)
spread = 0.0
initial_velocity_min = 30.0
initial_velocity_max = 30.0
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_6x7f2")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_pk6rl"]
transparency = 1
albedo_color = Color(0, 0.89411765, 1, 0.5058824)
emission_enabled = true
emission = Color(0, 0.89411765, 1, 1)

[sub_resource type="TorusMesh" id="TorusMesh_owh2v"]
lightmap_size_hint = Vector2i(33, 9)
material = SubResource("StandardMaterial3D_pk6rl")
add_uv2 = true
inner_radius = 1.0
outer_radius = 1.2
rings = 36
ring_segments = 16

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_e60w5"]
transparency = 1
albedo_color = Color(1, 1, 1, 0.0627451)

[sub_resource type="SphereMesh" id="SphereMesh_pk6rl"]
material = SubResource("StandardMaterial3D_e60w5")
radius = 2.0
height = 2.0
is_hemisphere = true

[sub_resource type="SphereShape3D" id="SphereShape3D_fstbi"]
radius = 0.98

[sub_resource type="CylinderShape3D" id="CylinderShape3D_shlot"]
radius = 2.0

[sub_resource type="BoxShape3D" id="BoxShape3D_brwhy"]
size = Vector3(2.5, 2, 9)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_n7ie5"]
radius = 12.0

[sub_resource type="Curve" id="Curve_qnimx"]
_limits = [0.0, 1.5, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 1.3), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_7cxsd"]
_limits = [0.0, 1.5, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.7, 1.3), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_548oj"]
_limits = [0.0, 1.5, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 1.3), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_bbdqe"]
_limits = [0.0, 1.5, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.7, 1.3), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_qntpm"]
_limits = [0.0, 1.5, 0.0, 1.0]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.5, 1.3), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_wex2d"]
_limits = [0.0, 1.5, 0.0, 1.0]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.7, 1.3), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="Dawn" type="CharacterBody3D" node_paths=PackedStringArray("note_manager", "tone_emitter", "targetting_box")]
collision_layer = 6
collision_mask = 3
script = ExtResource("1_m3k46")
note_manager = NodePath("Notes")
tone_emitter = NodePath("ToneEmitter")
targetting_box = NodePath("Hitboxes/Vision")
special_charge_time = 0.25
max_special_charges = 2
faction = 0
_breakable = false

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("2_n7ie5")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("3_qntpm")

[node name="Moving" type="Node" parent="StateMachine"]
script = ExtResource("4_wex2d")

[node name="Footstep SFX" type="FmodEventEmitter3D" parent="StateMachine/Moving"]
event_name = "event:/Player/Footsteps/Cave Footstep"
event_guid = "{1786b3c0-0467-4017-8d6d-95457d0666de}"

[node name="Attacking" type="Node" parent="StateMachine"]
script = ExtResource("5_548oj")

[node name="Tone1" type="Node" parent="StateMachine/Attacking"]
script = ExtResource("6_n7ie5")

[node name="Tone2" type="Node" parent="StateMachine/Attacking"]
script = ExtResource("6_n7ie5")

[node name="Tone3" type="Node" parent="StateMachine/Attacking"]
script = ExtResource("6_n7ie5")

[node name="Attack SFX" type="FmodEventEmitter3D" parent="StateMachine/Attacking"]
event_name = "event:/Player/Uniques/Grunt/Nova Grunt"
event_guid = "{8eed88f7-964e-435b-957d-c6705371ee3b}"

[node name="AltAttack" type="Node" parent="StateMachine" node_paths=PackedStringArray("finished_state")]
script = ExtResource("6_n7ie5")
auto_aim = false
finished_state = NodePath("../Moving")

[node name="Charging" type="Node" parent="StateMachine"]
script = ExtResource("6_qnimx")

[node name="Charging Ready SFX" type="FmodEventEmitter3D" parent="StateMachine/Charging"]
event_name = "event:/Player/Uniques/Charging/Nova Charging Ready"
event_guid = "{23409221-4198-492f-a97b-47731df994d2}"

[node name="Charging SFX" type="FmodEventEmitter3D" parent="StateMachine/Charging"]
event_name = "event:/Player/Uniques/Charging/Nova Charging"
event_guid = "{ae35a316-7807-4d22-94f3-798abfea4c5d}"

[node name="AttackingCharged" type="Node" parent="StateMachine" node_paths=PackedStringArray("hitbox")]
script = ExtResource("8_548oj")
hitbox = NodePath("../../Hitboxes/Sing")

[node name="AttackCharged SFX" type="FmodEventEmitter3D" parent="StateMachine/AttackingCharged"]
event_name = "event:/Player/Uniques/Charged Attack/Nova Charged Attack"
event_guid = "{c37be128-c419-442f-9d08-d6e0895a5e23}"

[node name="ChargingSpecial" type="Node" parent="StateMachine"]
script = ExtResource("8_bbdqe")

[node name="Dash SFX" type="FmodEventEmitter3D" parent="StateMachine/ChargingSpecial"]
event_name = "event:/Player/Uniques/Charging/Nova Charging"
event_guid = "{ae35a316-7807-4d22-94f3-798abfea4c5d}"

[node name="Special" type="Node" parent="StateMachine" node_paths=PackedStringArray("regular", "charged")]
script = ExtResource("10_7cxsd")
regular = NodePath("ToneSlowWave")
charged = NodePath("SpecialAbility")

[node name="ToneSlowWave" type="Node" parent="StateMachine/Special"]
script = ExtResource("6_n7ie5")

[node name="SpecialAbility" type="Node" parent="StateMachine/Special" node_paths=PackedStringArray("wave", "forte", "stun_wave", "vortex", "ice", "fish_shield", "notes")]
script = ExtResource("11_bbdqe")
wave = NodePath("ToneWave")
forte = NodePath("ToneForte")
stun_wave = NodePath("ToneStunWave")
vortex = NodePath("ToneVortex")
ice = NodePath("ToneIce")
fish_shield = NodePath("ToneFishShield")
notes = NodePath("../../../Notes")

[node name="ToneWave" type="Node" parent="StateMachine/Special/SpecialAbility"]
script = ExtResource("6_n7ie5")

[node name="ToneForte" type="Node" parent="StateMachine/Special/SpecialAbility"]
script = ExtResource("12_bxptc")

[node name="ToneStunWave" type="Node" parent="StateMachine/Special/SpecialAbility"]
script = ExtResource("6_n7ie5")

[node name="ToneVortex" type="Node" parent="StateMachine/Special/SpecialAbility"]
script = ExtResource("6_n7ie5")

[node name="ToneIce" type="Node" parent="StateMachine/Special/SpecialAbility"]
script = ExtResource("6_n7ie5")

[node name="ToneFishShield" type="Node" parent="StateMachine/Special/SpecialAbility" node_paths=PackedStringArray("shield_mesh", "shield")]
script = ExtResource("13_e60w5")
shield_mesh = NodePath("../../../../Effects/Shield")
shield = NodePath("../../../../Hitboxes/FishShield")

[node name="SwapIn" type="Node" parent="StateMachine"]
script = ExtResource("9_qntpm")

[node name="SwapOut" type="Node" parent="StateMachine"]
script = ExtResource("10_wex2d")

[node name="Sleeping" type="Node" parent="StateMachine"]
script = ExtResource("11_bxptc")

[node name="HitStun" type="Node" parent="StateMachine"]
script = ExtResource("12_6x7f2")

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource("18_wex2d")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_21ndv")

[node name="Effects" type="Node3D" parent="."]

[node name="SingWave" type="GPUParticles3D" parent="Effects"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2849052, 0)
emitting = false
amount = 6
lifetime = 0.3
one_shot = true
process_material = SubResource("ParticleProcessMaterial_e60w5")
draw_pass_1 = SubResource("TorusMesh_owh2v")

[node name="Shield" type="MeshInstance3D" parent="Effects"]
visible = false
mesh = SubResource("SphereMesh_pk6rl")

[node name="ForwardRay" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_fstbi")
target_position = Vector3(0, 0, -10)

[node name="Notes" type="Node" parent="." node_paths=PackedStringArray("ui_note1", "ui_note2", "ui_note3")]
script = ExtResource("21_h3uuf")
ui_note1 = NodePath("../DawnUI/HBoxContainer/Center/Note1")
ui_note2 = NodePath("../DawnUI/HBoxContainer/Center2/Note2")
ui_note3 = NodePath("../DawnUI/HBoxContainer/Center3/Note3")
metadata/_custom_type_script = "uid://dphi1qwayotd2"

[node name="ToneEmitter" type="Node" parent="."]
script = ExtResource("22_xiq0h")
melody = ExtResource("23_n7ie5")
slow_wave = ExtResource("25_qnimx")
fish = ExtResource("28_wex2d")
wave = ExtResource("28_qntpm")
stun_wave = ExtResource("31_6x7f2")
vortex_note = ExtResource("32_n6vc4")
ice_zone = ExtResource("33_fgi08")
metadata/_custom_type_script = "uid://cfs2f64dnml45"

[node name="Hitboxes" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("23_h166w")

[node name="FishShield" type="Area3D" parent="Hitboxes"]
collision_layer = 0
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitboxes/FishShield"]
shape = SubResource("CylinderShape3D_shlot")

[node name="Sing" type="Area3D" parent="Hitboxes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4.5)
collision_layer = 0
collision_mask = 8
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitboxes/Sing"]
shape = SubResource("BoxShape3D_brwhy")

[node name="Vision" type="Area3D" parent="Hitboxes"]
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitboxes/Vision"]
shape = SubResource("CylinderShape3D_n7ie5")

[node name="Hurt SFX" type="FmodEventEmitter3D" parent="."]
event_name = "event:/Player/Uniques/Hurt/Nova Hurt"
event_guid = "{220c3cb7-af5f-4662-90c5-1a103656ae58}"

[node name="Death SFX" type="FmodEventEmitter3D" parent="."]
event_name = "event:/Player/Uniques/Death/Nova Death"
event_guid = "{2d5b4a29-ca66-40a9-9da8-db918424ec2c}"

[node name="Dash SFX" type="FmodEventEmitter3D" parent="."]
event_name = "event:/Player/Dash/Base Dash"
event_guid = "{c01c64a7-fee5-463c-adda-e0bf3a57057b}"

[node name="Special Ready" type="FmodEventEmitter3D" parent="."]
event_name = "event:/Player/Uniques/Charging/Nova Charging Ready"
event_guid = "{23409221-4198-492f-a97b-47731df994d2}"

[node name="DawnUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -208.0
offset_top = -64.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="DawnUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)

[node name="Center" type="CenterContainer" parent="DawnUI/HBoxContainer"]
layout_mode = 2

[node name="Note1" type="TextureRect" parent="DawnUI/HBoxContainer/Center"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("25_xphuo")
expand_mode = 2
script = ExtResource("27_7cxsd")
fade_in = SubResource("Curve_qnimx")
fade_out = SubResource("Curve_7cxsd")

[node name="Center2" type="CenterContainer" parent="DawnUI/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Note2" type="TextureRect" parent="DawnUI/HBoxContainer/Center2"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("25_xphuo")
expand_mode = 2
script = ExtResource("27_7cxsd")
fade_in = SubResource("Curve_548oj")
fade_out = SubResource("Curve_bbdqe")

[node name="Center3" type="CenterContainer" parent="DawnUI/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="Note3" type="TextureRect" parent="DawnUI/HBoxContainer/Center3"]
visible = false
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture = ExtResource("25_xphuo")
expand_mode = 2
script = ExtResource("27_7cxsd")
fade_in = SubResource("Curve_qntpm")
fade_out = SubResource("Curve_wex2d")

[node name="Dawn\'s Circle" parent="." instance=ExtResource("38_pk6rl")]

[node name="dawn_rig" parent="." instance=ExtResource("31_qntpm")]
transform = Transform3D(-50, 0, -4.371139e-06, 0, 50, 0, 4.371139e-06, 0, -50, 0, 0, 0)

[connection signal="hurt" from="." to="Hurt SFX" method="play_one_shot" unbinds=1]
[connection signal="killed" from="." to="Death SFX" method="play_one_shot"]
[connection signal="player_dashed" from="." to="Dash SFX" method="play_one_shot"]
[connection signal="special_available" from="." to="Special Ready" method="play_one_shot"]
[connection signal="entered" from="StateMachine/Moving" to="StateMachine/Moving/Footstep SFX" method="play"]
[connection signal="finished" from="StateMachine/Moving" to="StateMachine/Moving/Footstep SFX" method="stop"]
[connection signal="attack_started" from="StateMachine/Attacking" to="StateMachine/Attacking/Attack SFX" method="play_one_shot" unbinds=1]
[connection signal="fire" from="StateMachine/Attacking/Tone1" to="ToneEmitter" method="spawn_melody"]
[connection signal="fire" from="StateMachine/Attacking/Tone2" to="ToneEmitter" method="spawn_melody"]
[connection signal="fire" from="StateMachine/Attacking/Tone3" to="ToneEmitter" method="spawn_melody"]
[connection signal="fire" from="StateMachine/AltAttack" to="ToneEmitter" method="spawn_fish"]
[connection signal="charge_count_increase" from="StateMachine/Charging" to="StateMachine/Charging/Charging Ready SFX" method="play_one_shot" unbinds=1]
[connection signal="entered" from="StateMachine/Charging" to="StateMachine/Charging/Charging SFX" method="play_one_shot"]
[connection signal="entered" from="StateMachine/AttackingCharged" to="Effects/SingWave" method="set_emitting" binds= [true]]
[connection signal="entered" from="StateMachine/ChargingSpecial" to="Dawn\'s Circle" method="restart_particles"]
[connection signal="finished" from="StateMachine/ChargingSpecial" to="Dawn\'s Circle" method="stop_particles"]
[connection signal="max_charge_count" from="StateMachine/ChargingSpecial" to="StateMachine/ChargingSpecial/Dash SFX" method="play_one_shot"]
[connection signal="finished" from="StateMachine/Special/ToneSlowWave" to="." method="set_special_cd"]
[connection signal="fire" from="StateMachine/Special/ToneSlowWave" to="ToneEmitter" method="spawn_slow_wave"]
[connection signal="fire" from="StateMachine/Special/SpecialAbility/ToneWave" to="ToneEmitter" method="spawn_wave"]
[connection signal="fire" from="StateMachine/Special/SpecialAbility/ToneStunWave" to="ToneEmitter" method="spawn_stun_wave"]
[connection signal="fire" from="StateMachine/Special/SpecialAbility/ToneVortex" to="ToneEmitter" method="spawn_vortex_note"]
[connection signal="fire" from="StateMachine/Special/SpecialAbility/ToneIce" to="ToneEmitter" method="spawn_ice_zone"]

[editable path="dawn_rig"]
